--- a/PowerApp/DataSources/T_OKR_APP_GCI_003.json
+++ b/PowerApp/DataSources/T_OKR_APP_GCI_003.json
@@ -44,6 +44,9 @@
       "OData__ColorTag": "Etiqueta de color",
       "Q": "Q",
       "Q#Id": "Q Id",
+      "responsables": "responsables",
+      "responsables#Claims": "responsables Claims",
+      "responsables@odata.type": "responsables (responsables@odata.type)",
       "Title": "nombreKR",
       "unidadDeMedida": "unidadDeMedida",
       "unidadDeMedida#Id": "unidadDeMedida Id",
