--- a/PowerApp/Other/Src/Confirmacion.pa.yaml
+++ b/PowerApp/Other/Src/Confirmacion.pa.yaml
@@ -9,13 +9,10 @@
 # ************************************************************************************************
 Screens:
   Confirmacion:
-    Properties:
-      LoadingSpinnerColor: =App.Theme.Colors.Primary
     Children:
       - Image5_1:
           Control: Image@2.2.3
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Height: =768
             Image: =Torito
             ImagePosition: =ImagePosition.Fill
@@ -24,7 +21,6 @@ Screens:
           Control: Rectangle@2.3.0
           Properties:
             AccessibleLabel: =
-            BorderColor: =App.Theme.Colors.Darker40
             Fill: =RGBA(0,0,0,0.3)
             Height: =668
             HoverFill: =RGBA(0, 0, 0, 0.3)
@@ -34,8 +30,6 @@ Screens:
       - iconCircle1:
           Control: Circle@2.3.0
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
-            Fill: =App.Theme.Colors.Primary
             Height: =128
             Width: =134
             X: =599
@@ -43,7 +37,6 @@ Screens:
       - iconCheck1:
           Control: Classic/Icon@2.5.0
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Color: =RGBA(255, 255, 255, 1)
             Height: =127
             Icon: =Icon.Check
@@ -61,7 +54,6 @@ Screens:
             Align: =Align.Center
             BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(255, 255, 255, 1)
-            Font: =App.Theme.Font
             Height: =54
             Size: =30
             Text: ="Se registró correctamente el KR"
@@ -76,16 +68,11 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
-            Color: =App.Theme.Colors.PrimaryForeground
-            DisabledBorderColor: =RGBA(244, 244, 244, 1)
             Fill: =RGBA(238,40,122,0.9)
-            HoverBorderColor: =App.Theme.Colors.Darker10
+            Font: =Font.'Open Sans'
             HoverColor: =Color.White
             HoverFill: =ColorValue("#EE2C70")
             OnSelect: =Navigate(Home)
-            PressedBorderColor: =App.Theme.Colors.Darker40
-            PressedColor: =Self.Color
-            PressedFill: =App.Theme.Colors.Darker40
             RadiusBottomLeft: =08
             RadiusBottomRight: =08
             RadiusTopLeft: =08
@@ -102,17 +89,12 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
-            Color: =App.Theme.Colors.PrimaryForeground
-            DisabledBorderColor: =RGBA(244, 244, 244, 1)
             Fill: =RGBA(238,40,122,0.9)
-            HoverBorderColor: =App.Theme.Colors.Darker10
+            Font: =Font.'Open Sans'
             HoverColor: =Color.White
             HoverFill: =ColorValue("#EE2C70")
             OnSelect: |
               =Navigate(Registrar_Tarea);
-            PressedBorderColor: =App.Theme.Colors.Darker40
-            PressedColor: =Self.Color
-            PressedFill: =App.Theme.Colors.Darker40
             RadiusBottomLeft: =08
             RadiusBottomRight: =08
             RadiusTopLeft: =08
@@ -124,14 +106,12 @@ Screens:
       - Rectangle1_3:
           Control: Rectangle@2.3.0
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Fill: =RGBA(0, 153, 204, 1)
             HoverFill: =ColorValue("#0099CC")
             Width: =1366
       - Image3_3:
           Control: Image@2.2.3
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Height: =70
             Image: ='Logo-pacifico-blanco'
             Width: =304
@@ -143,7 +123,6 @@ Screens:
             Align: =Align.Center
             BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(255, 255, 255, 1)
-            Font: =App.Theme.Font
             Height: =54
             Size: =30
             Text: =VarNombre
