--- a/PowerApp/Other/Src/Editar_Kr.pa.yaml
+++ b/PowerApp/Other/Src/Editar_Kr.pa.yaml
@@ -8,6 +8,4 @@
 # For more information, visit https://go.microsoft.com/fwlink/?linkid=2292623
 # ************************************************************************************************
 Screens:
-  Editar_Kr:
-    Properties:
-      LoadingSpinnerColor: =App.Theme.Colors.Primary
+  Editar_Kr: {}
