--- a/PowerApp/Other/Src/Power_BI.pa.yaml
+++ b/PowerApp/Other/Src/Power_BI.pa.yaml
@@ -8,6 +8,4 @@
 # For more information, visit https://go.microsoft.com/fwlink/?linkid=2292623
 # ************************************************************************************************
 Screens:
-  Power_BI:
-    Properties:
-      LoadingSpinnerColor: =App.Theme.Colors.Primary
+  Power_BI: {}
