--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -9,11 +9,9 @@
 # ************************************************************************************************
 Screens:
   Prueba_Nayeli:
-    Properties:
-      LoadingSpinnerColor: =App.Theme.Colors.Primary
     Children:
       - TextCanvas5:
-          Control: Text@0.0.43
+          Control: Text@0.0.47
           Properties:
             Height: =55
             Size: =30
@@ -24,14 +22,12 @@ Screens:
       - Rectangle1_7:
           Control: Rectangle@2.3.0
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Fill: =RGBA(0, 153, 204, 1)
             HoverFill: =ColorValue("#0099CC")
             Width: =1366
       - Image3_7:
           Control: Image@2.2.3
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Height: =70
             Image: ='Logo-pacifico-blanco'
             Width: =304
@@ -41,7 +37,6 @@ Screens:
           Control: Gallery@2.15.0
           Variant: BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0
           Properties:
-            BorderColor: =App.Theme.Colors.Darker40
             Height: =437
             Items: |+
               =Filter(
@@ -90,7 +85,6 @@ Screens:
             - Separator1:
                 Control: Rectangle@2.3.0
                 Properties:
-                  BorderColor: =App.Theme.Colors.Darker40
                   Fill: =RGBA(255, 255, 255, 1)
                   Height: =8
                   OnSelect: =Select(Parent)
@@ -99,14 +93,13 @@ Screens:
             - Rectangle1:
                 Control: Rectangle@2.3.0
                 Properties:
-                  BorderColor: =App.Theme.Colors.Darker40
                   Fill: =App.Theme.Colors.Darker30
                   Height: =Parent.TemplateHeight - Separator1.Height
                   OnSelect: =Select(Parent)
                   Visible: =ThisItem.IsSelected
                   Width: =4
             - TextCanvas7:
-                Control: Text@0.0.43
+                Control: Text@0.0.47
                 Properties:
                   Height: =56
                   Text: =ThisItem.codigoKR
@@ -114,7 +107,7 @@ Screens:
                   X: =20
                   Y: =14
             - TextCanvas7_1:
-                Control: Text@0.0.43
+                Control: Text@0.0.47
                 Properties:
                   Height: =56
                   Text: =ThisItem.nombreKR
@@ -122,16 +115,16 @@ Screens:
                   X: =110
                   Y: =14
             - TextCanvas7_2:
-                Control: Text@0.0.43
+                Control: Text@0.0.47
                 Properties:
                   Height: =56
-                  Text: |+
+                  Text: |
                     =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
                   Width: =141
                   X: =330
                   Y: =14
             - estadoKRtext_1:
-                Control: Text@0.0.43
+                Control: Text@0.0.47
                 Properties:
                   Align: ='TextCanvas.Align'.Center
                   BorderRadius: =8
@@ -156,7 +149,6 @@ Screens:
                 Control: Gallery@2.15.0
                 Variant: Horizontal
                 Properties:
-                  BorderColor: =App.Theme.Colors.Darker40
                   Height: =50
                   Items: =ThisItem.'Creado por'
                   TemplatePadding: =0
@@ -180,7 +172,7 @@ Screens:
                         Width: =42
                       Children:
                         - TextCanvas6_1:
-                            Control: Text@0.0.43
+                            Control: Text@0.0.47
                             Properties:
                               Align: ='TextCanvas.Align'.Center
                               Font: =Font.Arial
@@ -195,7 +187,6 @@ Screens:
                   - Image1_1:
                       Control: Image@2.2.3
                       Properties:
-                        BorderColor: =App.Theme.Colors.Darker40
                         Height: =50
                         Image: |
                           =IfError(
@@ -234,7 +225,7 @@ Screens:
                   FieldType: ="s"
                   Order: =1
       - filterBuscarKR_1:
-          Control: TextInput@0.0.49
+          Control: TextInput@0.0.51
           Properties:
             Height: =35
             Placeholder: ="Buscar por nombre KR"
