--- a/PowerApp/Other/Src/Roadmap.pa.yaml
+++ b/PowerApp/Other/Src/Roadmap.pa.yaml
@@ -8,6 +8,4 @@
 # For more information, visit https://go.microsoft.com/fwlink/?linkid=2292623
 # ************************************************************************************************
 Screens:
-  Roadmap:
-    Properties:
-      LoadingSpinnerColor: =App.Theme.Colors.Primary
+  Roadmap: {}
