--- a/PowerApp/Other/Src/ListaOKRs.pa.yaml
+++ b/PowerApp/Other/Src/ListaOKRs.pa.yaml
@@ -2605,6 +2605,7 @@ Screens:
             Height: =35
             InputTextPlaceholder: ="Seleccionar Responsable"
             Items: =Distinct(T_RESPONSABLES_APP_GCI_003,responsable.DisplayName)
+            MultiValueDelimiter: ="; "
             TriggerOutput: ='ComboboxCanvas.TriggerOutput'.Delayed
             Width: =200
             X: =621
