--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -2,16 +2,6 @@ Prueba_Nayeli As screen:
     Fill: =Color.White
     LoadingSpinnerColor: =App.Theme.Colors.Primary
 
-    TextCanvas5 As Texto:
-        DisplayMode: =DisplayMode.Edit
-        Height: =55
-        Size: =30
-        Text: ="Nombre del KR,código del KR,líder, estado del KR,responsable(como bolitas), botones"
-        Width: =1303
-        X: =48
-        Y: =187
-        ZIndex: =1
-
     Rectangle1_7 As rectangle:
         BorderColor: =App.Theme.Colors.Darker40
         Fill: =RGBA(0, 153, 204, 1)
@@ -34,7 +24,7 @@ Prueba_Nayeli As screen:
     "Gallery4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
-        Height: =437
+        Height: =455
         Items: |+
             =Filter(
                 T_OKR_APP_GCI_003,
@@ -61,7 +51,7 @@ Prueba_Nayeli As screen:
         TemplateSize: =90
         Width: =1245
         X: =59
-        Y: =283
+        Y: =264
         ZIndex: =4
 
         NextArrow1 As icon.ChevronRight:
@@ -100,11 +90,11 @@ Prueba_Nayeli As screen:
 
         TextCanvas7 As Texto:
             DisplayMode: =DisplayMode.Edit
-            Height: =56
+            Height: =50
             Text: =ThisItem.codigoKR
             Width: =90
             X: =20
-            Y: =14
+            Y: =20
             ZIndex: =7
 
         TextCanvas7_1 As Texto:
@@ -315,4 +305,34 @@ Prueba_Nayeli As screen:
             FieldVariantName: ="textualColumn"
             Order: =1
             ZIndex: =36
+
+    "TextInputCanvas2 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(180, 214, 250, 1)
+        Height: =33
+        Value: ="Código"
+        Width: =96
+        X: =59
+        Y: =194
+        ZIndex: =10
+
+    "TextInputCanvas2_1 As 'Entrada de texto'":
+        DisplayMode: =DisplayMode.Edit
+        Height: =33
+        Value: ="Descrpción del KR"
+        Width: =144
+        X: =169
+        Y: =194
+        ZIndex: =11
+
+    "TextInputCanvas2_2 As 'Entrada de texto'":
+        DisplayMode: =DisplayMode.Edit
+        Height: =33
+        Value: ="Responsable"
+        Width: =144
+        X: =369
+        Y: =194
+        ZIndex: =12
 
